--- a/src/be/ac/ulb/infof307/g06/views/mainMenuViews/ProjectMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/mainMenuViews/ProjectMenu.fxml
@@ -14,7 +14,8 @@
       <HBox layoutX="303.0" layoutY="363.0" spacing="40.0">
          <children>
             <Button fx:id="projectManagementBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false"
-                    onAction="#events" prefHeight="201.0" prefWidth="432.0" style="-fx-background-color: #4fc3f7;"
+                    onAction="#events" prefHeight="201.0" prefWidth="432.0"
+                    stylesheets="@../../resources/stylesheets/Button.css"
                     text="MANAGE PROJECTS " textFill="#f2f1f0">
                <font>
                   <Font size="36.0"/>
@@ -24,7 +25,8 @@
                </cursor>
             </Button>
             <Button fx:id="statsAccessBtn" mnemonicParsing="false" onAction="#events" prefHeight="201.0"
-                    prefWidth="422.0" style="-fx-background-color: #4fc3f7;" text=" STATISTICS" textFill="#f2f1f0">
+                    prefWidth="422.0" stylesheets="@../../resources/stylesheets/Button.css" text=" STATISTICS"
+                    textFill="#f2f1f0">
                <font>
                   <Font size="36.0"/>
                </font>
@@ -35,7 +37,8 @@
          </children>
       </HBox>
       <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#events"
-              prefHeight="54.0" prefWidth="201.0" style="-fx-background-color: #4fc3f7;" text="BACK" textFill="WHITE">
+              prefHeight="54.0" prefWidth="201.0" stylesheets="@../../resources/stylesheets/Button.css" text="BACK"
+              textFill="WHITE">
          <font>
             <Font name="Calibri" size="24.0"/>
          </font>
