--- a/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
@@ -2,24 +2,21 @@
 
 <?import com.calendarfx.view.AllDayView?>
 <?import com.calendarfx.view.WeekDayHeaderView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.CheckComboBox?>
-
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1"
             fx:controller="be.ac.ulb.infof307.g06.views.calendarViews.CalendarViewController">
     <children>
         <ComboBox fx:id="colorsComboBox" layoutX="632.0" layoutY="27.0" onAction="#onColorSelected" prefWidth="150.0"/>
         <Button fx:id="backBtn" layoutX="1387.0" layoutY="846.0" mnemonicParsing="false" onAction="#calendarEvents"
-                prefHeight="40.0" prefWidth="88.0" style="-fx-background-color: #4BBAEB;" text="BACK" textFill="white"/>
+                prefHeight="40.0" prefWidth="88.0" stylesheets="@../../resources/stylesheets/Button.css" text="BACK"
+                textFill="white"/>
         <HBox layoutX="20.0" layoutY="19.0" prefHeight="40.0" prefWidth="187.0" spacing="20.0">
             <children>
                 <Button fx:id="previousWeekBtn" mnemonicParsing="false" onAction="#calendarEvents" prefHeight="40.0"
