--- a/src/be/ac/ulb/infof307/g06/views/mainMenuViews/InvitationView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/mainMenuViews/InvitationView.fxml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
+<?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="473.0" prefWidth="541.0" xmlns="http://javafx.com/javafx/15.0.1"
             fx:controller="be.ac.ulb.infof307.g06.views.mainMenuViews.InvitationViewController">
@@ -19,20 +16,21 @@
          </children>
       </VBox>
       <Button fx:id="acceptBtn" layoutX="63.0" layoutY="405.0" mnemonicParsing="false" onAction="#events"
-              prefHeight="25.0" prefWidth="152.0" style="-fx-background-color: #4fc3f7;" text="ACCEPT"/>
+              prefHeight="25.0" prefWidth="152.0" stylesheets="@../../resources/stylesheets/Button.css" text="ACCEPT"/>
       <Text fx:id="errorText" layoutX="12.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0"
             text="You've been invited to collaborate on a project" textAlignment="CENTER" underline="true"
             wrappingWidth="519.0">
          <font>
-            <Font name="Calibri" size="18.0" />
+            <Font name="Calibri" size="18.0"/>
          </font>
       </Text>
-      <Button fx:id="declineBtn" layoutX="334.0" layoutY="405.0" mnemonicParsing="false" onAction="#events" prefHeight="25.0" prefWidth="152.0" style="-fx-background-color: #4fc3f7;" text="DECLINE" />
+      <Button fx:id="declineBtn" layoutX="334.0" layoutY="405.0" mnemonicParsing="false" onAction="#events"
+              prefHeight="25.0" prefWidth="152.0" stylesheets="@../../resources/stylesheets/Button.css" text="DECLINE"/>
       <VBox layoutX="126.0" layoutY="80.0" prefHeight="314.0" prefWidth="395.0" spacing="40.0">
          <children>
-            <TextField fx:id="senderNameTextField" />
-            <TextField fx:id="projectNameTextField" />
-            <TextField fx:id="descriptionTextField" prefHeight="160.0" prefWidth="340.0" />
+            <TextField fx:id="senderNameTextField"/>
+            <TextField fx:id="projectNameTextField"/>
+            <TextField fx:id="descriptionTextField" prefHeight="160.0" prefWidth="340.0"/>
          </children>
       </VBox>
    </children>
