--- a/src/be/ac/ulb/infof307/g06/views/projectViews/popups/AddProjectView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/projectViews/popups/AddProjectView.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.CheckComboBox?>
-
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="473.0" prefWidth="541.0" xmlns="http://javafx.com/javafx/15.0.1"
             fx:controller="be.ac.ulb.infof307.g06.views.projectViews.popups.AddProjectViewController">
@@ -24,10 +21,12 @@
             <TextField fx:id="parentProject" prefHeight="35.0" prefWidth="283.0" promptText="Parent( optionnal )"/>
          </children>
       </VBox>
-      <Button fx:id="addProjectBtn" layoutX="195.0" layoutY="405.0" mnemonicParsing="false" onAction="#events" prefHeight="25.0" prefWidth="152.0" style="-fx-background-color: #4fc3f7;" text="ADD" />
-      <Text fx:id="errorText" fill="RED" layoutX="12.0" layoutY="447.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="519.0">
+      <Button fx:id="addProjectBtn" layoutX="195.0" layoutY="405.0" mnemonicParsing="false" onAction="#events"
+              prefHeight="25.0" prefWidth="152.0" stylesheets="@../../../resources/stylesheets/Button.css" text="ADD"/>
+      <Text fx:id="errorText" fill="RED" layoutX="12.0" layoutY="447.0" strokeType="OUTSIDE" strokeWidth="0.0"
+            wrappingWidth="519.0">
          <font>
-            <Font name="Calibri" size="12.0" />
+            <Font name="Calibri" size="12.0"/>
          </font>
       </Text>
    </children>
