--- a/src/be/ac/ulb/infof307/g06/views/settingsViews/TagsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/settingsViews/TagsView.fxml
@@ -18,7 +18,8 @@
                 <Font name="Calibri" size="12.0"/>
             </font>
         </Button>
-        <Button fx:id="addBtn" layoutX="458.0" layoutY="741.0" mnemonicParsing="false" onAction="#events"
+        <Button fx:id="addBtn" layoutX="458.0" layoutY="741.0" mnemonicParsing="false"
+                stylesheets="@../../resources/stylesheets/Button.css" onAction="#events"
                 prefHeight="25.0" prefWidth="54.0" text="ADD">
             <font>
                 <Font name="Calibri" size="12.0"/>
