--- a/src/be/ac/ulb/infof307/g06/views/statisticsViews/OverallStatsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/statisticsViews/OverallStatsView.fxml
@@ -4,66 +4,77 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.PieChart?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.effect.Bloom?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
 <AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.views.statisticsViews.StatsViewController">
    <children>
-      <Button fx:id="backToProjectMenu" layoutX="1254.0" layoutY="820.0" mnemonicParsing="false" onAction="#statsEvents"
-              prefHeight="54.0" prefWidth="201.0" stylesheets="@../../resources/stylesheets/Button.css"
-              styleClass="container" text="BACK" textFill="WHITE">
+      <Button fx:id="backToProjectMenu" layoutX="1254.0" layoutY="820.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="54.0" prefWidth="201.0" styleClass="container" stylesheets="@../../resources/stylesheets/Button.css" text="BACK" textFill="WHITE">
          <font>
-            <Font name="Calibri" size="24.0"/>
+            <Font name="Calibri" size="24.0" />
          </font>
       </Button>
       <VBox layoutX="548.0" layoutY="107.0" prefHeight="704.0" prefWidth="283.0" spacing="51.0">
          <children>
-            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container"
-                  stylesheets="@../../resources/stylesheets/StatsView.css">
+            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@../../resources/stylesheets/StatsView.css">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="168.0" styleClass="shadow"
-                         stylesheets="@../../resources/stylesheets/StatsView.css" text="Collaborators" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="168.0" styleClass="shadow" stylesheets="@../../resources/stylesheets/StatsView.css" text="Collaborators" textFill="WHITE">
                      <font>
-                        <Font name="Cambria Bold" size="24.0"/>
+                        <Font name="Cambria Bold" size="24.0" />
                      </font>
+                     <tooltip>
+                        <Tooltip fx:id="collabortorsToolTip" text="Collborators" />
+                     </tooltip>
                   </Label>
                   <Label fx:id="collaboratorsNumber" layoutX="112.0" layoutY="65.0" text="20" textFill="WHITE">
                      <font>
-                        <Font size="48.0"/>
+                        <Font size="48.0" />
                      </font>
                   </Label>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container"
-                  stylesheets="@../../resources/stylesheets/StatsView.css">
+            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@../../resources/stylesheets/StatsView.css">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="116.0" styleClass="shadow"
-                         stylesheets="@../../resources/stylesheets/StatsView.css" text="Tasks" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="116.0" styleClass="shadow" stylesheets="@../../resources/stylesheets/StatsView.css" text="Tasks" textFill="WHITE">
                      <font>
-                        <Font name="Cambria Bold" size="24.0"/>
+                        <Font name="Cambria Bold" size="24.0" />
                      </font>
+                     <tooltip>
+                        <Tooltip fx:id="tasksToolTip" text="Tasks" />
+                     </tooltip>
                   </Label>
                   <Label fx:id="tasksNumber" layoutX="125.0" layoutY="65.0" text="9" textFill="WHITE">
                      <font>
-                        <Font size="48.0"/>
+                        <Font size="48.0" />
                      </font>
                   </Label>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container"
-                  stylesheets="@../../resources/stylesheets/StatsView.css">
+            <Pane prefHeight="200.0" prefWidth="275.0" styleClass="container" stylesheets="@../../resources/stylesheets/StatsView.css">
                <children>
-                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="116.0" styleClass="shadow"
-                         stylesheets="@../../resources/stylesheets/StatsView.css" text="Projects" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="14.0" prefHeight="43.0" prefWidth="116.0" styleClass="shadow" stylesheets="@../../resources/stylesheets/StatsView.css" text="Projects" textFill="WHITE">
                      <font>
-                        <Font name="Cambria Bold" size="24.0"/>
+                        <Font name="Cambria Bold" size="24.0" />
                      </font>
+                     <tooltip>
+                        <Tooltip fx:id="projectsToolTip" text="Projects" />
+                     </tooltip>
                   </Label>
                   <Label fx:id="projectsNumber" layoutX="112.0" layoutY="65.0" text="53" textFill="WHITE">
                      <font>
-                        <Font size="48.0"/>
+                        <Font size="48.0" />
                      </font>
                   </Label>
                </children>
@@ -72,37 +83,34 @@
       </VBox>
       <VBox layoutX="873.0" layoutY="107.0" prefHeight="704.0" prefWidth="513.0" spacing="10.0">
          <children>
-            <ScrollPane prefHeight="322.0" prefWidth="513.0" styleClass="container"
-                        stylesheets="@../../resources/stylesheets/StatsView.css">
+            <ScrollPane prefHeight="322.0" prefWidth="513.0" styleClass="container" stylesheets="@../../resources/stylesheets/StatsView.css">
                <content>
-                  <AnchorPane fx:id="pieChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="541.0"
-                              prefWidth="556.0">
+                  <AnchorPane fx:id="pieChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="541.0" prefWidth="556.0">
                      <children>
-                        <PieChart fx:id="projectsChart" layoutX="-32.0" layoutY="-4.0" prefHeight="550.0"
-                                  prefWidth="588.0" styleClass="container"
-                                  stylesheets="@../../resources/stylesheets/StatsView.css"/>
+                        <PieChart fx:id="projectsChart" layoutX="-32.0" layoutY="-4.0" prefHeight="550.0" prefWidth="588.0" styleClass="container" stylesheets="@../../resources/stylesheets/StatsView.css" />
                      </children>
                   </AnchorPane>
                </content>
             </ScrollPane>
             <ScrollPane prefHeight="373.0" prefWidth="513.0">
               <content>
-                 <AnchorPane fx:id="barChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="358.0"
-                             prefWidth="513.0">
+                 <AnchorPane fx:id="barChartAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="358.0" prefWidth="513.0">
                     <children>
-                       <Pane fx:id="barChartPane" layoutY="2.0" prefHeight="358.0" prefWidth="513.0"
-                             styleClass="container" stylesheets="@../../resources/stylesheets/StatsView.css">
+                       <Pane fx:id="barChartPane" layoutY="2.0" prefHeight="358.0" prefWidth="513.0" styleClass="container" stylesheets="@../../resources/stylesheets/StatsView.css">
                           <children>
-                             <BarChart fx:id="tasksChart" categoryGap="15.0" layoutX="-3.0" layoutY="-1.0"
-                                       prefHeight="358.0" prefWidth="501.0" title="Project Tasks">
+                             <BarChart fx:id="tasksChart" categoryGap="15.0" layoutX="-3.0" layoutY="-1.0" prefHeight="358.0" prefWidth="501.0" title="Project Tasks">
                                 <xAxis>
-                                   <CategoryAxis endMargin="10.0" label="Projects" prefHeight="55.0" prefWidth="740.0"
-                                                 side="BOTTOM" tickLabelRotation="-51.3"/>
+                                   <CategoryAxis endMargin="10.0" label="Projects" prefHeight="55.0" prefWidth="740.0" side="BOTTOM" tickLabelRotation="-51.3" />
                                 </xAxis>
                                 <yAxis>
-                                   <NumberAxis label="Tasks" minorTickVisible="false" side="LEFT"/>
+                                   <NumberAxis label="Tasks" minorTickVisible="false" side="LEFT" />
                                 </yAxis>
                              </BarChart>
+                              <Label fx:id="barChartLabel" layoutX="10.0" layoutY="9.0" opacity="0.0" prefHeight="336.0" prefWidth="490.0" text="barChartLabel">
+                                 <tooltip>
+                                    <Tooltip fx:id="barChartToolTip" text="barChart" />
+                                 </tooltip>
+                              </Label>
                           </children>
                        </Pane>
                     </children>
@@ -111,89 +119,67 @@
             </ScrollPane>
          </children>
       </VBox>
-      <Line endX="1394.0" layoutX="104.0" layoutY="78.0" startX="-100.0" stroke="WHITE"/>
-      <Polygon fill="#4ec8f50d" layoutX="-158.0" layoutY="383.0"
-               points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 685.5999755859375, 516.0"
-               stroke="TRANSPARENT" strokeType="INSIDE">
+      <Line endX="1394.0" layoutX="104.0" layoutY="78.0" startX="-100.0" stroke="WHITE" />
+      <Polygon fill="#4ec8f50d" layoutX="-158.0" layoutY="383.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 685.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE">
          <effect>
-            <Bloom/>
+            <Bloom />
          </effect>
       </Polygon>
-      <Polygon fill="#4ec8f50d" layoutX="-197.0" layoutY="383.0"
-               points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 653.5999755859375, 516.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="359.0"
-               points="216.00001525878906, 539.2000122070312, 205.59999084472656, 33.0, 598.5999755859375, 540.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Polygon fill="#4fc3f70d" layoutX="-163.0" layoutY="323.0"
-               points="162.00001525878906, 576.0, 161.59999084472656, 93.0, 483.5999755859375, 576.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Polygon fill="#4ec8f50d" layoutX="-157.0" layoutY="-30.0"
-               points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 550.5999755859375, 29.0"
-               stroke="TRANSPARENT" strokeType="INSIDE">
+      <Polygon fill="#4ec8f50d" layoutX="-197.0" layoutY="383.0" points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 653.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="359.0" points="216.00001525878906, 539.2000122070312, 205.59999084472656, 33.0, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="-163.0" layoutY="323.0" points="162.00001525878906, 576.0, 161.59999084472656, 93.0, 483.5999755859375, 576.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-157.0" layoutY="-30.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 550.5999755859375, 29.0" stroke="TRANSPARENT" strokeType="INSIDE">
          <effect>
-            <Bloom/>
+            <Bloom />
          </effect>
       </Polygon>
-      <Polygon fill="#4ec8f50d" layoutX="-195.0" layoutY="-47.0"
-               points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 534.5999755859375, 32.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Polygon fill="#4ec8f50d" layoutX="-204.0" layoutY="-30.0"
-               points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Polygon fill="#4fc3f70d" layoutX="-161.0" layoutY="-37.0"
-               points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE"
-                 width="1500.0"/>
-      <Pane layoutX="119.0" layoutY="107.0" prefHeight="704.0" prefWidth="380.0" styleClass="container"
-            stylesheets="@../../resources/stylesheets/StatsView.css">
+      <Polygon fill="#4ec8f50d" layoutX="-195.0" layoutY="-47.0" points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 534.5999755859375, 32.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-204.0" layoutY="-30.0" points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="-161.0" layoutY="-37.0" points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE" width="1500.0" />
+      <Pane layoutX="119.0" layoutY="107.0" prefHeight="704.0" prefWidth="380.0" styleClass="container" stylesheets="@../../resources/stylesheets/StatsView.css">
          <children>
-            <Button fx:id="overallViewBtn" layoutX="89.0" layoutY="61.0" mnemonicParsing="false" onAction="#statsEvents"
-                    prefHeight="158.0" prefWidth="202.0" styleClass="stats-choice"
-                    stylesheets="@../../resources/stylesheets/StatsView.css" text="OVERALL VIEW" textFill="WHITE">
+            <Button fx:id="overallViewBtn" layoutX="89.0" layoutY="61.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="158.0" prefWidth="202.0" styleClass="stats-choice" stylesheets="@../../resources/stylesheets/StatsView.css" text="OVERALL VIEW" textFill="WHITE">
                <font>
-                  <Font name="Cambria" size="18.0"/>
+                  <Font name="Cambria" size="18.0" />
                </font>
             </Button>
-            <TextField fx:id="fileNameTextField" alignment="CENTER" layoutX="45.0" layoutY="533.0" prefHeight="26.0"
-                       prefWidth="290.0" promptText="Statistics (Filename by default) "/>
-            <Button fx:id="exportCSVBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="106.0" layoutY="579.0"
-                    lineSpacing="10.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="39.0"
-                    prefWidth="74.0" stylesheets="@../../resources/stylesheets/Button.css" text=".csv" textFill="WHITE">
+            <TextField fx:id="fileNameTextField" alignment="CENTER" layoutX="45.0" layoutY="533.0" prefHeight="26.0" prefWidth="290.0" promptText="Statistics (Filename by default) ">
+               <tooltip>
+                  <Tooltip fx:id="exportToolTip" text="exportToolTip" />
+               </tooltip></TextField>
+            <Button fx:id="exportCSVBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="106.0" layoutY="579.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="39.0" prefWidth="74.0" stylesheets="@../../resources/stylesheets/Button.css" text=".csv" textFill="WHITE">
                <font>
-                  <Font name="Calibri" size="18.0"/>
+                  <Font name="Calibri" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="exportJSONBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="579.0"
-                    lineSpacing="10.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="39.0"
-                    prefWidth="74.0" stylesheets="@../../resources/stylesheets/Button.css" text=".json"
-                    textFill="WHITE">
+            <Button fx:id="exportJSONBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="200.0" layoutY="579.0" lineSpacing="10.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="39.0" prefWidth="74.0" stylesheets="@../../resources/stylesheets/Button.css" text=".json" textFill="WHITE">
                <font>
-                  <Font name="Calibri" size="18.0"/>
+                  <Font name="Calibri" size="18.0" />
                </font>
             </Button>
-            <Text fx:id="msgExportText" fill="#407a4b" layoutX="45.0" layoutY="675.0" strokeType="OUTSIDE"
-                  strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="289.99999999999994"/>
-            <Button fx:id="projectViewBtn" layoutX="89.0" layoutY="273.0" mnemonicParsing="false"
-                    onAction="#statsEvents" prefHeight="158.0" prefWidth="202.0" styleClass="stats-choice"
-                    stylesheets="@../../resources/stylesheets/StatsView.css" text="PROJECT VIEW" textFill="WHITE">
+            <Text fx:id="msgExportText" fill="#407a4b" layoutX="45.0" layoutY="675.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="289.99999999999994" />
+            <Button fx:id="projectViewBtn" layoutX="89.0" layoutY="273.0" mnemonicParsing="false" onAction="#statsEvents" prefHeight="158.0" prefWidth="202.0" styleClass="stats-choice" stylesheets="@../../resources/stylesheets/StatsView.css" text="PROJECT VIEW" textFill="WHITE">
                <font>
-                  <Font name="Cambria" size="18.0"/>
+                  <Font name="Cambria" size="18.0" />
                </font>
             </Button>
          </children>
       </Pane>
-      <Label layoutX="33.0" layoutY="3.0" prefHeight="70.0" prefWidth="283.0" styleClass="shadow"
-             stylesheets="@../../resources/stylesheets/StatsView.css" text="Statistics " textFill="WHITE">
+      <Label layoutX="33.0" layoutY="3.0" prefHeight="70.0" prefWidth="283.0" styleClass="shadow" stylesheets="@../../resources/stylesheets/StatsView.css" text="Statistics " textFill="WHITE">
          <font>
-            <Font size="48.0"/>
+            <Font size="48.0" />
          </font>
       </Label>
       <Label layoutX="44.0" layoutY="59.0" prefHeight="17.0" prefWidth="151.0" text="Overall view" textFill="WHITE">
          <font>
-            <Font name="DejaVu Sans Condensed Bold" size="12.0"/>
+            <Font name="DejaVu Sans Condensed Bold" size="12.0" />
          </font>
+      </Label>
+      <Label fx:id="pieChartLabel" layoutX="878.0" layoutY="90.0" opacity="0.0" prefHeight="322.0" prefWidth="490.0" text="pieChartLabel">
+         <tooltip>
+            <Tooltip fx:id="pieChartToolTip" text="pieChartLabel" />
+         </tooltip>
       </Label>
    </children>
 </AnchorPane>
