--- a/src/be/ac/ulb/infof307/g06/views/settingsViews/SettingsView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/settingsViews/SettingsView.fxml
@@ -20,7 +20,6 @@
             <Cursor fx:constant="DEFAULT"/>
          </cursor>
       </Pane>
-      <HBox layoutX="358.0" layoutY="592.0" spacing="40.0"/>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4fc3f7" height="900.0" stroke="TRANSPARENT" strokeType="INSIDE"
                  strokeWidth="0.0" width="531.0">
          <cursor>
@@ -39,7 +38,7 @@
             <Font name="Calibri" size="48.0"/>
          </font>
       </Text>
-      <Button fx:id="tagsBtn" defaultButton="true" graphicTextGap="0.0" layoutX="-1.0" layoutY="226.0"
+      <Button fx:id="tagsBtn" defaultButton="true" graphicTextGap="0.0" layoutX="-1.0" layoutY="302.0"
               mnemonicParsing="false" onAction="#events" onMouseEntered="#hover" onMouseExited="#exitHover"
               prefHeight="78.0" prefWidth="531.0" style="-fx-background-color: #4fc3f7;" text="Tags                    "
               textAlignment="CENTER" textFill="#f2f1f0">
@@ -56,9 +55,9 @@
             <Insets/>
          </opaqueInsets>
       </Button>
-      <Button fx:id="languageBtn" graphicTextGap="0.0" layoutY="305.0" mnemonicParsing="false" onAction="#events"
-              onMouseEntered="#hover" onMouseExited="#exitHover" prefHeight="78.0" prefWidth="531.0"
-              style="-fx-background-color: #4fc3f7;" text="Language           " textFill="#f2f1f0">
+      <Button fx:id="profileBtn" graphicTextGap="0.0" layoutX="-1.0" layoutY="223.0" mnemonicParsing="false"
+              onAction="#events" onMouseEntered="#hover" onMouseExited="#exitHover" prefHeight="78.0" prefWidth="531.0"
+              style="-fx-background-color: #4fc3f7;" text="Profile                 " textFill="#f2f1f0">
          <font>
             <Font size="24.0"/>
          </font>
@@ -86,16 +85,16 @@
             <Cursor fx:constant="HAND"/>
          </cursor>
       </Button>
-      <ImageView fitHeight="37.0" fitWidth="67.0" layoutX="-52.0" layoutY="247.0" pickOnBounds="true"
+      <ImageView fitHeight="37.0" fitWidth="67.0" layoutX="-52.0" layoutY="323.0" pickOnBounds="true"
                  preserveRatio="true" x="100.0">
          <image>
             <Image url="@../../resources/icons/TAGS_ICON.png"/>
          </image>
       </ImageView>
-      <ImageView fitHeight="37.0" fitWidth="67.0" layoutX="48.0" layoutY="326.0" pickOnBounds="true"
+      <ImageView fitHeight="37.0" fitWidth="67.0" layoutX="47.0" layoutY="244.0" pickOnBounds="true"
                  preserveRatio="true">
          <image>
-            <Image url="@../../resources/icons/LANGUAGE_ICON.png"/>
+            <Image url="@../../resources/icons/USER_ICON.png"/>
          </image>
       </ImageView>
       <ImageView fitHeight="37.0" fitWidth="67.0" layoutX="48.0" layoutY="402.0" pickOnBounds="true"
